; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/extr_ttml.c_tt_MemstreamPutEntities.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/extr_ttml.c_tt_MemstreamPutEntities.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_memstream = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vlc_memstream*, i8*)* @tt_MemstreamPutEntities to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tt_MemstreamPutEntities(%struct.vlc_memstream* %0, i8* %1) #0 {
  %3 = alloca %struct.vlc_memstream*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store %struct.vlc_memstream* %0, %struct.vlc_memstream** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i8* @vlc_xml_encode(i8* %6)
  store i8* %7, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load %struct.vlc_memstream*, %struct.vlc_memstream** %3, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @vlc_memstream_puts(%struct.vlc_memstream* %11, i8* %12)
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @free(i8* %14)
  br label %16

16:                                               ; preds = %10, %2
  ret void
}

declare dso_local i8* @vlc_xml_encode(i8*) #1

declare dso_local i32 @vlc_memstream_puts(%struct.vlc_memstream*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
